--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@
 /build
 
 # misc
-.eslintcache
-/.eslintcache
 .DS_Store
 .env.local
 .env.development.local
@@ -23,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# cache
+.eslintcache
+.cache
